@@ -31,7 +31,7 @@ import org.jets3t.service.Constants;
  * <p>
  * If either the targetBucketName or logfilePrefix are null, this object will represent a 
  * <b>disabled</b> logging status (as indicated by {@link isLoggingEnabled()}) and 
- * the XML document generated by {@link toXml()} will enable logging for the named bucket when
+ * the XML document generated by {@link toXml()} will disable logging for the named bucket when
  * provided to {@link S3Service#setBucketLoggingStatus(String, S3BucketLoggingStatus)}.
  * 
  * @author James Murty
